--- a/src/Login.css
+++ b/src/Login.css
@@ -2,9 +2,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh; /* Use min-height to ensure the container takes at least the full viewport height */
   background-color: white;
 }
+
 .login__logo {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -12,6 +13,7 @@
   width: 100px;
   margin-right: auto;
   margin-left: auto;
+  width: 150px;
 }
 
 .login__container {
@@ -45,21 +47,78 @@
   font-size: 12px;
 }
 
+/* Apply styles to both buttons */
 .login__signInButton {
-  background: #f0c14b;
+  background: linear-gradient(to bottom, #f8e2a7, #f0c14b);
   border-radius: 2px;
   width: 100%;
   height: 30px;
-  border: 1px solid;
+  border: 1px solid #a88734;
   margin-top: 10px;
-  border-color: #a88734#9c7e31#846a29;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease, border 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Hover and Active states for both buttons */
+.login__signInButton:hover {
+  background-color: #e0a13c;
+}
+
+.login__signInButton:active {
+  transform: scale(0.95);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-color: #846a29;
+}
+
+/* Customize the focus state for both buttons */
+.login__signInButton:focus {
+  outline: none; /* Remove the default focus outline */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 0 0 2px #f0c14b; /* Optional: Add a box-shadow and border for focus state */
 }
 
 .login__registerButton {
+  cursor: pointer;
   border-radius: 2px;
   width: 100%;
   height: 30px;
   border: 1px solid;
   margin-top: 10px;
   border-color: darkgray;
+}
+
+.login__copyright {
+  margin-top: auto; /* This will push the content to the bottom */
+  text-align: center;
+}
+
+.login__copyright__line1 {
+  display: flex;
+  text-align: center;
+  padding: 2%;
+}
+
+.login__copyright__line1 > h6 {
+  margin-right: 13px;
+}
+
+.login__copyright__line2 {
+  display: flex;
+  text-align: center;
+}
+
+.login__footer__line {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.14),
+    rgba(0, 0, 0, 0.03) 3px,
+    transparent
+  );
+  zoom: 1;
+  margin-bottom: -18px;
+
+  height: 44px;
+  z-index: 0;
+  padding-top: 100px;
+  margin-top: 20px;
 }
