--- a/src/Payment.css
+++ b/src/Payment.css
@@ -32,20 +32,40 @@
 }
 
 .payment__details > form {
-  max-width: 400;
+  max-width: 400px;
 }
 
-.payment__details > h4 {
+.payment__details > h3 {
   padding-bottom: 20px;
 }
 
 .payment__details > form > div > button {
-  background: #f0c14b;
+  background: linear-gradient(to bottom, #f8e2a7, #f0c14b);
   border-radius: 2px;
   width: 100%;
   height: 30px;
+  border: 1px solid #a88734;
   font-weight: bolder;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease, border 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #111;
+}
+
+.payment__details > form > div > button:hover {
+  background-color: #e0a13c;
+}
+.links{
+  text-decoration: none;
+}
+.payment__details > form > div > button:active {
+  transform: scale(0.95);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-color: #846a29;
+}
+
+.payment__details > form > div > button:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 0 0 2px #f0c14b;
 }
