--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -7,27 +7,48 @@
   height: 100px;
   padding: 20px;
   background-color: #f3f3f3;
-  border: 1pxsolid#dddddd;
+  border: 1px solid #dddddd;
   border-radius: 3px;
 }
+
 .subtotal__gift {
   display: flex;
   align-items: center;
 }
+
 .subtotal__gift > label {
   display: flex;
   align-items: center;
 }
+
 .subtotal__gift > input {
   margin-right: 5px;
 }
+
 .subtotal > button {
-  background-color: #a88734 #9c7e31 #846a29;
+  background: linear-gradient(to bottom, #f8e2a7, #f0c14b);
   color: #111;
-  background: #f0c14b;
   border-radius: 2px;
   width: 100%;
   height: 30px;
-  border: 1px solid;
-  margin-top: 10px;
+  border: 1px solid #a88734;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease, border 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.subtotal > button:hover {
+  background-color: #e0a13c;
+}
+
+.subtotal > button:active {
+  transform: scale(0.95);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-color: #846a29;
+}
+
+/* Customize the focus state */
+.subtotal > button:focus {
+  outline: none; /* Remove the default focus outline */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 0 0 2px #f0c14b; /* Optional: Add a box-shadow and border for focus state */
 }
